edited the heading

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             Bulgan <span class="text-secondary">Erdenebaatar</span>
         </h1>
         <h2 class="sm-heading">
-            Graduated from a bootcamp - Full Stack and Web Developer
+            Full Stack Developer
         </h2>
     </main>
 
