--- a/index.html
+++ b/index.html
@@ -43,12 +43,8 @@
             <!-- HOME -->
             <section class="home section" id="home">
                 <div class="home__container bd-grid">
-                    <h1 class="home__title"><span>HE</span><br>LLO.</h1>
-
-                    <div class="home__scroll">
-                        <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt'></i>Scroll Down</a>
-                    </div>
-
+                    <h1 class="home__title"><span>HE</span><br>LLO.<span>WEL</span><br>COME<br/><span>TOMY</span><br>PAGE</h1></h1>
+                   
                     <img src="assets/img/selfie-1.png" alt="" class="home__img">
                 </div>
             </section>
@@ -59,7 +55,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/perfil.png" alt="">
+                        <img src="assets/img/selfie-1.png" alt="">
                     </div>
 
                     <div>
@@ -86,23 +82,23 @@
                         <span class="skills__name">CSS</span>
                         <span class="skills__name">JavaScript</span>
                         <span class="skills__name">Scss</span>
+                        <span class="skills__name">Git</span>
                         <span class="skills__name">React</span>
                         <span class="skills__name">React Native</span>
+                        <span class="skills__name">React-Redux</span>
                         <span class="skills__name">Bootstrap</span>
                         <span class="skills__name">REST API</span>
                         <span class="skills__name">JQuery</span>
                         <span class="skills__name">NodeJS</span>
                         <span class="skills__name">MongoDB</span>
-
-                        <h3 class="skills__subtitle">Design</h3>
-                        <span class="skills__name">Figma</span>
-                        <span class="skills__name">Figma</span>
-                        <span class="skills__name">Figma</span>
-                        <span class="skills__name">Figma</span>
+                        <span class="skills__name">Express</span>
+                        <span class="skills__name">Postman</span>
+                        <span class="skills__name">Passport</span>
+                        <span class="skills__name">Visual Studio</span>
                     </div>
 
                     <div class="skills__img">
-                        <img src="assets/img/skills.jpg" alt="">
+                        <img src="assets/img/green.jpg" alt="">
                     </div>
                 </div>
             </section>
@@ -150,12 +146,12 @@
                     <div>
                         <h2 class="about__subtitle">Nucamp Coding Bootcamp</h2>
                         <span class="about__profession">March 2020 - July 2020</span>
-                        <span class="about__profession">Full Stack Mobile and Web Developer</span>
+                        <span class="about__profession-span">Full Stack Mobile and Web Developer</span>
                     </div>
                     <div>
                         <h2 class="about__subtitle">Edmonds Communinty College</h2>
                         <span class="about__profession">April 2010 - December 2012</span>
-                        <span class="about__profession">International Business A.A</span>
+                        <span class="about__profession-span">International Business A.A</span>
                     </div>
                 </div>
             </section>
@@ -164,20 +160,41 @@
             <section class="contact section" id="contact">
                 <h2 class="section-title">How to Reach Me</h2>
                 <div class="contact__container bd-grid">
-                    <div class="contact__info">
-                        <h3 class="contact__subtitle">Email</h3>
-                        <span class="contact__text">bulganebaatar@gmail.com</span>
-                    </div>
-                    <div class="contact__info">
-                        <h3 class="contact__subtitle">Phone</h3>
-                        <span class="contact__text">206-658-3236</span>
-                    </div>
-                    <div class="contact__info">
-                        <h3 class="contact__subtitle">Address</h3>
-                        <span class="contact__text">Everett, WA</span>
+                    <div class="card border-0 middle">
+                <div class="front">
+                    <p class="front-content"><i class='bx bx-mail-send'>Email</i></p>
+                </div>
+                <div class="back">
+                    <div class="back-content middle">
+                        <h5>bulganebaatar@gmail.com</h5>
                     </div>
                 </div>
+            </div>
+            <div class="card border-0 middle">
+                <div class="front">
+                    <p class="front-content"><i class='bx bx-phone'>Phone</i></p>
+                </div>
+                <div class="back">
+                    <div class="back-content middle">
+                        <h5>206-658-3236</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="card border-0 middle">
+                <div class="front">
+                    <p class="front-content"><i class='bx bxs-map'>Address</i></p>
+                </div>
+                <div class="back">
+                    <div class="back-content middle">
+                        <h5>Everett, Washington 98208</h5>
+                    </div>
+                </div>
+            </div>
+                </div>
             </section>
+
+            
+
         </main>
 
         <footer class="footer section">
