--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="assets/css/style.css">
 
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Padauk&display=swap" rel="stylesheet">
+
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 		<!-- Bootstrap CSS -->
 		<link
@@ -43,7 +46,7 @@
             <!-- HOME -->
             <section class="home section" id="home">
                 <div class="home__container bd-grid">
-                    <h1 class="home__title"><span>HE</span><br>LLO.<span>WEL</span><br>COME<br/><span>TOMY</span><br>PAGE</h1></h1>
+                    <h1 class="home__title"><span>HE</span><br>LLO<span>WEL</span><br>COME<br/><span>TOMY</span><br>PAGE</h1>
                    
                     <img src="assets/img/selfie-1.png" alt="" class="home__img">
                 </div>
@@ -106,7 +109,6 @@
             <!--  Portfolio  -->
             <section class="portfolio section" id="portfolio">
                 <h2 class="section-title">Projects</h2>
-
                 <div class="portfolio__container bd-grid">
                     <div class="portfolio__img">
                         <img src="assets/img/project-4.png" alt="">
@@ -159,41 +161,39 @@
             <!--  Contact  -->
             <section class="contact section" id="contact">
                 <h2 class="section-title">How to Reach Me</h2>
-                    <div class="contact__container bd-grid">
-                        <div class="card border-0 middle">
-                            <div class="front">
-                                <p class="front-content"><i class='bx bx-mail-send'>Email</i></p>
-                            </div>
-                            <div class="back">
-                                <div class="back-content middle">
-                                    <h5>bulganebaatar@gmail.com</h5>
-                                </div>
-                            </div>
+                <div class="contact__container bd-grid">
+                    <div class="card border-0 middle">
+                        <div class="front">
+                            <p class="front-content"><i class='bx bx-mail-send'>Email</i></p>
                         </div>
-                        <div class="card border-0 middle">
-                            <div class="front">
-                                <p class="front-content"><i class='bx bx-phone'>Phone</i></p>
-                            </div>
-                            <div class="back">
-                                <div class="back-content middle">
-                                    <h5>206-658-3236</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card border-0 middle">
-                            <div class="front">
-                                <p class="front-content"><i class='bx bxs-map'>Address</i></p>
-                            </div>
-                            <div class="back">
-                                <div class="back-content middle">
-                                    <h5>Everett, Washington 98208</h5>
-                                </div>
+                        <div class="back">
+                            <div class="back-content middle">
+                                <h5>bulganebaatar@gmail.com</h5>
                             </div>
                         </div>
                     </div>
+                    <div class="card border-0 middle">
+                        <div class="front">
+                            <p class="front-content"><i class='bx bx-phone'>Phone</i></p>
+                        </div>
+                        <div class="back">
+                            <div class="back-content middle">
+                                <h5>206-658-3236</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card border-0 middle">
+                        <div class="front">
+                            <p class="front-content"><i class='bx bxs-map'>Address</i></p>
+                        </div>
+                        <div class="back">
+                            <div class="back-content middle">
+                                <h5>Everett, Washington 98208</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
-
-            
 
         </main>
 
