card deleted in contact

--- a/index.html
+++ b/index.html
@@ -162,35 +162,17 @@
             <section class="contact section" id="contact">
                 <h2 class="section-title">How to Reach Me</h2>
                 <div class="contact__container bd-grid">
-                    <div class="card border-0 middle">
-                        <div class="front">
-                            <p class="front-content"><i class='bx bx-mail-send'>Email</i></p>
-                        </div>
-                        <div class="back">
-                            <div class="back-content middle">
-                                <h5>bulganebaatar@gmail.com</h5>
-                            </div>
-                        </div>
+                    <div class="contact__item">
+                        <h2><i class='bx bx-mail-send'>Email</i></h2>
+                        <p class="contact__text">bulganebaatar@gmail.com</p>
                     </div>
-                    <div class="card border-0 middle">
-                        <div class="front">
-                            <p class="front-content"><i class='bx bx-phone'>Phone</i></p>
-                        </div>
-                        <div class="back">
-                            <div class="back-content middle">
-                                <h5>206-658-3236</h5>
-                            </div>
-                        </div>
+                    <div class="contact__item">
+                        <h2><i class='bx bx-phone'>Phone</i></h2>
+                        <p class="contact__text">206-658-3236</p>
                     </div>
-                    <div class="card border-0 middle">
-                        <div class="front">
-                            <p class="front-content"><i class='bx bxs-map'>Address</i></p>
-                        </div>
-                        <div class="back">
-                            <div class="back-content middle">
-                                <h5>Everett, Washington 98208</h5>
-                            </div>
-                        </div>
+                    <div class="contact__item">
+                        <h2><i class='bx bxs-map'>Address</i></h2>
+                        <p class="contact__text">Everett, WA 98208</p>
                     </div>
                 </div>
             </section>
