--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                        <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#portfolio" class="nav__link">Projects</a></li>
@@ -46,7 +46,7 @@
             <!-- HOME -->
             <section class="home section" id="home">
                 <div class="home__container bd-grid">
-                    <h1 class="home__title"><span>HE</span><br>LLO<span>WEL</span><br>COME<br/><span>TOMY</span><br>PAGE</h1>
+                    <h1 class="home__title"><span>HE</span><br>LLO<span>WEL</span><br>COME<br><span>TOMY</span><br>PAGE</h1>
                    
                     <img src="assets/img/selfie-1.png" alt="" class="home__img">
                 </div>
@@ -74,7 +74,7 @@
                 </div>
             </section>
 
-            <!-- ABOUT -->
+            <!-- Skills -->
             <section class="skills section" id="skills">
                 <h2 class="section-title">Skills</h2>
 
@@ -106,9 +106,10 @@
                 </div>
             </section>
 
-            <!--  Portfolio  -->
+            <!--  Projects/ Portfolio  -->
             <section class="portfolio section" id="portfolio">
                 <h2 class="section-title">Projects</h2>
+                
                 <div class="portfolio__container bd-grid">
                     <div class="portfolio__img">
                         <img src="assets/img/project-4.png" alt="">
