--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </section>
 
             <!-- ABOUT -->
-            <section class="about section" id="about">
+            <section class="about" id="about">
                 <h2 class="section-title">About</h2>
 
                 <div class="about__container bd-grid">
@@ -109,7 +109,7 @@
             <!--  Projects/ Portfolio  -->
             <section class="portfolio section" id="portfolio">
                 <h2 class="section-title">Projects</h2>
-                
+
                 <div class="portfolio__container bd-grid">
                     <div class="portfolio__img">
                         <img src="assets/img/project-4.png" alt="">
